force-app/main/default/objects/Opportunity/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <description>Taken from Account&apos;s Branch Field</description>
    <formula>TEXT(Account.Branch__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Taken from Account&apos;s Branch Field</inlineHelpText>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>