force-app/main/default/objects/Opportunity/fields/Account_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Source__c</fullName>
    <formula>TEXT(Account.AccountSource)</formula>
    <label>Account Source</label>
    <type>Text</type>
</CustomField>