force-app/main/default/objects/Opportunity/fields/Account_State__c.field-meta.xml
<CustomField>
    <fullName>Account_State__c</fullName>
    <formula>IF( Account.ShippingState = null,  Account.BillingState ,  Account.ShippingState )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account State</label>
    <type>Text</type>
</CustomField>