force-app/main/default/objects/Opportunity/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <formula>CASE(Banco__c, 
&apos;Itaú&apos;, &apos;4516&apos;,
&apos;Banco do Brasil&apos;, &apos;3235-2&apos;,
&apos;Caixa Econômica Federal&apos;, &apos;4082 Op.003&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agência</label>
    <type>Text</type>
</CustomField>