force-app/main/default/objects/Opportunity/fields/Amount_with_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Amount_with_Taxes__c</fullName>
    <label>Amount with Taxes</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>