force-app/main/default/objects/Opportunity/fields/BU01_Injection_and_Pharma__c.field-meta.xml
<CustomField>
    <fullName>BU01_Injection_and_Pharma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BU01 Injection and Pharma</label>
    <type>Checkbox</type>
</CustomField>