force-app/main/default/objects/Opportunity/fields/BU02_Diagnostics__c.field-meta.xml
<CustomField>
    <fullName>BU02_Diagnostics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BU02 Diagnostics</label>
    <type>Checkbox</type>
</CustomField>