force-app/main/default/objects/Opportunity/fields/BU03_Diabetes_Care__c.field-meta.xml
<CustomField>
    <fullName>BU03_Diabetes_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BU03 Diabetes Care</label>
    <type>Checkbox</type>
</CustomField>