force-app/main/default/objects/Opportunity/fields/BU04_Vascular_Infusion__c.field-meta.xml
<CustomField>
    <fullName>BU04_Vascular_Infusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BU04 Vascular Access &amp; Infusion Therapy</label>
    <type>Checkbox</type>
</CustomField>