force-app/main/default/objects/Opportunity/fields/BU05_Oncology__c.field-meta.xml
<CustomField>
    <fullName>BU05_Oncology__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BU05 Oncology</label>
    <type>Checkbox</type>
</CustomField>