force-app/main/default/objects/Opportunity/fields/BU06_Injection_Prevention__c.field-meta.xml
<CustomField>
    <fullName>BU06_Injection_Prevention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BU06 Injection Prevention</label>
    <type>Checkbox</type>
</CustomField>