force-app/main/default/objects/Opportunity/fields/BU07_Kitting__c.field-meta.xml
<CustomField>
    <fullName>BU07_Kitting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BU07 Kitting</label>
    <type>Checkbox</type>
</CustomField>