force-app/main/default/objects/Opportunity/fields/BU08_Advanced_Wound_Care__c.field-meta.xml
<CustomField>
    <fullName>BU08_Advanced_Wound_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BU08 Advanced Wound Care</label>
    <type>Checkbox</type>
</CustomField>