force-app/main/default/objects/Opportunity/fields/BU09_Medical_Supplies__c.field-meta.xml
<CustomField>
    <fullName>BU09_Medical_Supplies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BU09 Medical Supplies</label>
    <type>Checkbox</type>
</CustomField>