force-app/main/default/objects/Opportunity/fields/BU10_SolCotton__c.field-meta.xml
<CustomField>
    <fullName>BU10_SolCotton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BU10 SolCotton</label>
    <type>Checkbox</type>
</CustomField>