force-app/main/default/objects/Opportunity/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <label>BU</label>
    <length>10</length>
    <type>Text</type>
</CustomField>