force-app/main/default/objects/Opportunity/fields/CEPOportunidade__c.field-meta.xml
<CustomField>
    <fullName>CEPOportunidade__c</fullName>
    <description>Digite o CEP.</description>
    <label>CEP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>