force-app/main/default/objects/Opportunity/fields/CidadeOportunidade__c.field-meta.xml
<CustomField>
    <fullName>CidadeOportunidade__c</fullName>
    <description>Digite a cidade.</description>
    <label>Cidade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>