force-app/main/default/objects/Opportunity/fields/Closed_Won_LOTs__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_LOTs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Closed Won LOTs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>