force-app/main/default/objects/Opportunity/fields/CodigoSAP__c.field-meta.xml
<CustomField>
    <fullName>CodigoSAP__c</fullName>
    <externalId>true</externalId>
    <label>Código SAP</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>