force-app/main/default/objects/Opportunity/fields/Conversion_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conversion Opportunity</label>
    <type>Checkbox</type>
</CustomField>