force-app/main/default/objects/Opportunity/fields/CubeRMTender__c.field-meta.xml
<CustomField>
    <fullName>CubeRMTender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cube RM Tender</label>
    <referenceTo>cuberm_tc__Tender__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>