force-app/main/default/objects/Opportunity/fields/Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category__c</fullName>
    <label>Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heavy Users</fullName>
            </value>
            <value>
                <fullName>High Profitability</fullName>
            </value>
            <value>
                <fullName>Key-Account</fullName>
            </value>
            <value>
                <fullName>Key Products</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>