force-app/main/default/objects/Opportunity/fields/DataEntrega__c.field-meta.xml
<CustomField>
    <fullName>DataEntrega__c</fullName>
    <label>Data de Entrega</label>
    <type>Date</type>
</CustomField>