force-app/main/default/objects/Opportunity/fields/DataFechamentoMenorDataAtual__c.field-meta.xml
<CustomField>
    <fullName>DataFechamentoMenorDataAtual__c</fullName>
    <formula>IF((CloseDate - TODAY()) &lt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de Fechamento menor que data atual</label>
    <type>Checkbox</type>
</CustomField>