force-app/main/default/objects/Opportunity/fields/Days_Without_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Without_Activity__c</fullName>
    <formula>NOW() -   DATETIMEVALUE( LastModifiedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Without Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>