force-app/main/default/objects/Opportunity/fields/Distributor_Stock_Date__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Stock_Date__c</fullName>
    <formula>Target_Convert_Date__c  - 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Stock Date</label>
    <type>Date</type>
</CustomField>