force-app/main/default/objects/Opportunity/fields/Duration_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Contract__c</fullName>
    <label>Duration of Contract</label>
    <length>75</length>
    <type>Text</type>
</CustomField>