force-app/main/default/objects/Opportunity/fields/EnderecoOportunidade__c.field-meta.xml
<CustomField>
    <fullName>EnderecoOportunidade__c</fullName>
    <description>Digite o Endereço.</description>
    <label>Endereço</label>
    <length>50</length>
    <type>Text</type>
</CustomField>