force-app/main/default/objects/Opportunity/fields/EstadoOportunidade__c.field-meta.xml
<CustomField>
    <fullName>EstadoOportunidade__c</fullName>
    <description>Digite o estado.</description>
    <label>Estado</label>
    <length>35</length>
    <type>Text</type>
</CustomField>