force-app/main/default/objects/Opportunity/fields/Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue__c</fullName>
    <description>Technical field used in OpportunityTenderLotRollupHelper for currency aggregate.</description>
    <formula>ExpectedRevenue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>