force-app/main/default/objects/Opportunity/fields/Expected_Revenue_on_LOTs__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue_on_LOTs__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Summarized Expected Revenue from each LOT.</inlineHelpText>
    <label>Expected Revenue on LOTs</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>