force-app/main/default/objects/Opportunity/fields/Forma_de_frete__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_frete__c</fullName>
    <label>Forma de frete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>FOB China</fullName>
            </value>
            <value>
                <fullName>EXW Lublin</fullName>
            </value>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>DDP</fullName>
            </value>
            <value>
                <fullName>FOB - RODONAVES</fullName>
            </value>
            <value>
                <fullName>FOB - GRUPO TROCA</fullName>
            </value>
            <value>
                <fullName>FOB - BRASPRESS</fullName>
            </value>
            <value>
                <fullName>FOB - JAMEF</fullName>
            </value>
            <value>
                <fullName>FOB - LOVATO</fullName>
            </value>
            <value>
                <fullName>FOB - ATIVA</fullName>
            </value>
            <value>
                <fullName>FOB - TRANSWELLS</fullName>
            </value>
            <value>
                <fullName>FOB - BSB</fullName>
            </value>
            <value>
                <fullName>FOB - PATRUS</fullName>
            </value>
            <value>
                <fullName>FOB - TNT MERCURIO</fullName>
            </value>
            <value>
                <fullName>FOB - RISSO</fullName>
            </value>
            <value>
                <fullName>CIF - Samples</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>