force-app/main/default/objects/Opportunity/fields/Forma_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Pagamento__c</fullName>
    <label>Forma de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boleto Bancário</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Depósito Bancário</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>