force-app/main/default/objects/Opportunity/fields/GPO__c.field-meta.xml
<CustomField>
    <fullName>GPO__c</fullName>
    <formula>Account.GPO__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GPO</label>
    <type>Text</type>
</CustomField>