force-app/main/default/objects/Opportunity/fields/Has_Qualified_Activity__c.field-meta.xml
<CustomField>
    <fullName>Has_Qualified_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Qualified Activity</label>
    <type>Checkbox</type>
</CustomField>