force-app/main/default/objects/Opportunity/fields/HPG_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>HPG_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this Opportunity is related to the HPG Contract, please mark this checkbox</inlineHelpText>
    <label>HPG Opportunity</label>
    <type>Checkbox</type>
</CustomField>