force-app/main/default/objects/Opportunity/fields/IDN__c.field-meta.xml
<CustomField>
    <fullName>IDN__c</fullName>
    <formula>Account.IDN__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDN</label>
    <type>Text</type>
</CustomField>