force-app/main/default/objects/Opportunity/fields/Incoterms_Locations__c.field-meta.xml
<CustomField>
    <fullName>Incoterms_Locations__c</fullName>
    <label>Incoterms Locations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>