force-app/main/default/objects/Opportunity/fields/Is_this_a_recurring_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_recurring_opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this a Recurring Opportunity</label>
    <type>Checkbox</type>
</CustomField>