force-app/main/default/objects/Opportunity/fields/IsChildren__c.field-meta.xml
<CustomField>
    <fullName>IsChildren__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidade filha</label>
    <type>Checkbox</type>
</CustomField>