force-app/main/default/objects/Opportunity/fields/Last_Activity_Custom__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Custom__c</fullName>
    <label>Last Activity (Custom)</label>
    <type>Date</type>
</CustomField>