force-app/main/default/objects/Opportunity/fields/MainUsage__c.field-meta.xml
<CustomField>
    <fullName>MainUsage__c</fullName>
    <label>MainUsage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>