force-app/main/default/objects/Opportunity/fields/MinimumOrderQuantity__c.field-meta.xml
<CustomField>
    <fullName>MinimumOrderQuantity__c</fullName>
    <label>Minimum Order Quantity</label>
    <type>TextArea</type>
</CustomField>