force-app/main/default/objects/Opportunity/fields/NecessitaAprovacao__c.field-meta.xml
<CustomField>
    <fullName>NecessitaAprovacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Necessita de Aprovação</label>
    <type>Checkbox</type>
</CustomField>