force-app/main/default/objects/Opportunity/fields/Number_of_Categories__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Categories__c</fullName>
    <label>Number of Categories</label>
    <summaryForeignKey>Product_Line__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>