force-app/main/default/objects/Opportunity/fields/Number_of_LOTs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_LOTs__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Overall number of LOTs</inlineHelpText>
    <label>Number of LOTs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>