force-app/main/default/objects/Opportunity/fields/NumeroEmpenho__c.field-meta.xml
<CustomField>
    <fullName>NumeroEmpenho__c</fullName>
    <label>Número do Empenho</label>
    <length>150</length>
    <type>Text</type>
</CustomField>