force-app/main/default/objects/Opportunity/fields/NumeroPedidoCliente__c.field-meta.xml
<CustomField>
    <fullName>NumeroPedidoCliente__c</fullName>
    <label>Número Pedido Cliente</label>
    <length>150</length>
    <type>Text</type>
</CustomField>