force-app/main/default/objects/Opportunity/fields/NumeroProcesso__c.field-meta.xml
<CustomField>
    <fullName>NumeroProcesso__c</fullName>
    <label>Número do Processo</label>
    <length>150</length>
    <type>Text</type>
</CustomField>