force-app/main/default/objects/Opportunity/fields/Open_LOTs__c.field-meta.xml
<CustomField>
    <fullName>Open_LOTs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Open LOTs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>