force-app/main/default/objects/Opportunity/fields/Opportunity_Region__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Region__c</fullName>
    <description>Pulled from the Account &quot;Zone&quot; field</description>
    <formula>TEXT(Account.Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from the Account &quot;Zone&quot; field</inlineHelpText>
    <label>Opportunity Region</label>
    <type>Text</type>
</CustomField>