force-app/main/default/objects/Opportunity/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que define se uma oportunidade está atrasada, ou atualizada em uma data futura à Close Date.</description>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>