force-app/main/default/objects/Opportunity/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <type>TextArea</type>
</CustomField>