force-app/main/default/objects/Opportunity/fields/Prazo__c.field-meta.xml
<CustomField>
    <fullName>Prazo__c</fullName>
    <inlineHelpText>Até R$ 10.000,00:  à vista | 30 dias   --x--  Entre R$ 10.000,01 a R$ 60.000,00: à vista | 30 dias | 30/45 dias | 30/45/60 dias   --x--  Entre R$ 60.000,01 a R$ 300.000,00: à vista | 30 dias | 30/45 dias | 30/45/60 dias | 30/60 dias  --x--  
Acima de R$ 300.000,01: à vista | 30 dias | 30/45 dias | 30/45/60 dias | 30/60 dias | 30/60/90 dias</inlineHelpText>
    <label>Prazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>22</fullName>
                <label>100% prepayment before production</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>100% prepayment before shipment</label>
            </value>
            <value>
                <fullName>10d</fullName>
                <isActive>false</isActive>
                <label>10d</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>10d</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>120d</label>
            </value>
            <value>
                <fullName>14d</fullName>
                <isActive>false</isActive>
                <label>14d</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>14d</label>
            </value>
            <value>
                <fullName>15d</fullName>
                <isActive>false</isActive>
                <label>15d</label>
            </value>
            <value>
                <fullName>28d</fullName>
                <isActive>false</isActive>
                <label>28d</label>
            </value>
            <value>
                <fullName>49</fullName>
                <label>28d</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>30/40</label>
            </value>
            <value>
                <fullName>30/45</fullName>
                <isActive>false</isActive>
                <label>30/45</label>
            </value>
            <value>
                <fullName>46</fullName>
                <label>30/45</label>
            </value>
            <value>
                <fullName>30/45/60</fullName>
                <isActive>false</isActive>
                <label>30/45/60</label>
            </value>
            <value>
                <fullName>47</fullName>
                <label>30/45/60</label>
            </value>
            <value>
                <fullName>30/45/60/75</fullName>
                <isActive>false</isActive>
                <label>30/45/60/75</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>30/45/60/75</label>
            </value>
            <value>
                <fullName>30/45/60/75/90</fullName>
                <isActive>false</isActive>
                <label>30/45/60/75/90</label>
            </value>
            <value>
                <fullName>30/60</fullName>
                <isActive>false</isActive>
                <label>30/60</label>
            </value>
            <value>
                <fullName>44</fullName>
                <label>30/60</label>
            </value>
            <value>
                <fullName>30/60/75</fullName>
                <isActive>false</isActive>
                <label>30/60/75</label>
            </value>
            <value>
                <fullName>30/60/90</fullName>
                <isActive>false</isActive>
                <label>30/60/90</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>30/60/90</label>
            </value>
            <value>
                <fullName>43</fullName>
                <label>30% Prepayment, 70% COD</label>
            </value>
            <value>
                <fullName>30d</fullName>
                <isActive>false</isActive>
                <label>30d</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>30d</label>
            </value>
            <value>
                <fullName>35d</fullName>
                <isActive>false</isActive>
                <label>35d</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>35d</label>
            </value>
            <value>
                <fullName>45/60/90</fullName>
                <isActive>false</isActive>
                <label>45/60/90</label>
            </value>
            <value>
                <fullName>54</fullName>
                <label>45/60/90</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>