force-app/main/default/objects/Opportunity/fields/PrecoListaTotal__c.field-meta.xml
<CustomField>
    <fullName>PrecoListaTotal__c</fullName>
    <label>Preço de Lista Total</label>
    <summarizedField>OpportunityLineItem.TotalPrecoLista__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>