force-app/main/default/objects/Opportunity/fields/price_commitment__c.field-meta.xml
<CustomField>
    <fullName>price_commitment__c</fullName>
    <label>Price Commitment</label>
    <length>75</length>
    <type>Text</type>
</CustomField>